2009-10-20 10:19  rsbivand

	* DESCRIPTION, R/classInt.R, man/classIntervals.Rd: argument
	  passing

2009-09-17 10:19  rsbivand

	* DESCRIPTION, man/classIntervals.Rd, man/findColours.Rd,
	  ChangeLog: fix documentation links

2009-05-25 12:20  rsbivand

	* DESCRIPTION, R/classInt.R, man/classIntervals.Rd,
	  man/findColours.Rd, ChangeLog: representation update 2

2009-05-25 08:17  rsbivand

	* DESCRIPTION, R/classInt.R, man/classIntervals.Rd: representation
	  overhaul 1

2009-05-12 10:33  rsbivand

	* ChangeLog: tidy

2009-05-12 10:33  rsbivand

	* DESCRIPTION, R/classInt.R, man/classIntervals.Rd: correction to
	  jenks style intervals

2008-01-18 22:40  rsbivand

	* DESCRIPTION: jenks

2007-11-21 19:13  rsbivand

	* DESCRIPTION, R/classInt.R, man/classIntervals.Rd: Jenks

2007-09-04 14:49  rsbivand

	* ChangeLog: Changelog

2007-08-24 09:20  rsbivand

	* DESCRIPTION, man/classIntervals.Rd: methods Rd

2006-12-07 19:19  rsbivand

	* DESCRIPTION, src/fish1.f: E300

2006-03-20 09:30  rsbivand

	* DESCRIPTION, NAMESPACE, R/classInt.R, man/classIntervals.Rd,
	  man/findColours.Rd, src/fish1.f: 1-5

2006-03-10 14:13  rsbivand

	* DESCRIPTION, NAMESPACE, R/classInt.R, data/jenks71.rda,
	  man/classIntervals.Rd, man/findColours.Rd, man/findCols.Rd,
	  man/getBclustClassIntervals.Rd, man/jenks.tests.Rd,
	  man/jenks71.Rd: Initial revision

2006-03-10 14:13  rsbivand

	* DESCRIPTION, NAMESPACE, R/classInt.R, data/jenks71.rda,
	  man/classIntervals.Rd, man/findColours.Rd, man/findCols.Rd,
	  man/getBclustClassIntervals.Rd, man/jenks.tests.Rd,
	  man/jenks71.Rd: initial import
