@@ -1,6 +1,6 @@
 Package: classInt
-Version: 0.1-13
-Date: 2009-10-20
+Version: 0.1-14
+Date: 2009-12-21
 Title: Choose univariate class intervals
 Author: Roger Bivand <Roger.Bivand@nhh.no>, with contributions by Hisaji Ono and Richard Dunlap
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
